searching acout flexbox

--- a/index.html
+++ b/index.html
@@ -21,7 +21,27 @@
            </ul>
        </nav>
    </header>
-   <div></div>
+   <div class="main-visual">
+        <p class="main-visual-text">Lorem Ipsum</p>
+        <p class="main-visual-name">simply dummy text of the printing</p>
+   </div>
+   <div class="portfolio">
+        <p class="portfolio-text">Portfolio</p>
+        <p class="portfolio-name">
+           It is a long established fact that a reader will be destracted by the readable<br>
+           content of a page whrn looking at its layout<br>
+           The point of using Lorem Ipsum is thst it has more-or-less normal distribution of letters
+        </p>
+        <div class="portfolio-box">
+           <div class="portfolio-img1"></div>
+           <div class="portfolio-img2"></div>
+           <div class="portfolio-img3"></div>
+           <div class="portfolio-img4"></div>
+           <div class="portfolio-img5"></div>
+           <div class="portfolio-img6"></div>
+       </div>
+         
+   </div>
    <footer>
        <p class="footer-text">© 2022 WebCamp</p>
    </footer> 
