finish portfolio page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
            <div class="portfolio-img5"></div>
            <div class="portfolio-img6"></div>
        </div>
-         
+   </div>
+   <div>
+       
    </div>
    <footer>
        <p class="footer-text">© 2022 WebCamp</p>
