--- a/index.html
+++ b/index.html
@@ -1,51 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <title>My Site</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/55c81123f0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <title>My Site</title>
 </head>
+
 <body>
-   <header>
-       <div>
-        <img  class="logo" src="img/logo.png" alt="ロゴ">
-       </div>
-       <nav>
-           <ul class="nav-list">
-               <li class="nav-list-item">Portfolio</li>
-               <li class="nav-list-item">Feature</li>
-               <li class="nav-list-item">Profile</li>
-               <li class="nav-list-item">Contact</li>
-           </ul>
-       </nav>
-   </header>
-   <div class="main-visual">
+    <header>
+        <div>
+            <img class="logo" src="img/logo.png" alt="ロゴ">
+        </div>
+        <nav>
+            <ul class="nav-list">
+                <li class="nav-list-item">Portfolio</li>
+                <li class="nav-list-item">Feature</li>
+                <li class="nav-list-item">Profile</li>
+                <li class="nav-list-item">Contact</li>
+            </ul>
+        </nav>
+    </header>
+    <div class="main-visual">
         <p class="main-visual-text">Lorem Ipsum</p>
         <p class="main-visual-name">simply dummy text of the printing</p>
-   </div>
-   <div class="portfolio">
-        <p class="portfolio-text">Portfolio</p>
+    </div>
+    <div class="portfolio">
+        <h2 class="portfolio-text">Portfolio</h2>
         <p class="portfolio-name">
-           It is a long established fact that a reader will be destracted by the readable<br>
-           content of a page whrn looking at its layout<br>
-           The point of using Lorem Ipsum is thst it has more-or-less normal distribution of letters
+            It is a long established fact that a reader will be destracted by the readable<br>
+            content of a page whrn looking at its layout<br>
+            The point of using Lorem Ipsum is thst it has more-or-less normal distribution of letters
         </p>
         <div class="portfolio-box">
-           <div class="portfolio-img1"></div>
-           <div class="portfolio-img2"></div>
-           <div class="portfolio-img3"></div>
-           <div class="portfolio-img4"></div>
-           <div class="portfolio-img5"></div>
-           <div class="portfolio-img6"></div>
-       </div>
-   </div>
-   <div>
-       
-   </div>
-   <footer>
-       <p class="footer-text">© 2022 WebCamp</p>
-   </footer> 
+            <div class="portfolio-img1"></div>
+            <div class="portfolio-img2"></div>
+            <div class="portfolio-img3"></div>
+            <div class="portfolio-img4"></div>
+            <div class="portfolio-img5"></div>
+            <div class="portfolio-img6"></div>
+        </div>
+    </div>
+    <div class="features">
+        <h2 class="feature-text">Feature</h2>
+        <p class="feature-name">
+            It is a long established fact that a reader will be distracted by the readable<br>
+            content of a page when looking at its layout.<br>
+            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+        </p>
+        <div class="strength-box">
+            <div class="strength">
+                <p class="icon"><i class="fa-solid fa-code"></i></p>
+                <h3 class="strength-name"><br>Strength1</h3>
+                <p class="strength-text">
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin
+                    professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
+                    consectetur
+                </p>
+            </div>
+            <div class="strength">
+                <p class="icon"><i class="fa-solid fa-desktop"></i></p>
+                <h3 class="strength-name">Strength2</h3>
+                <p class="strength-text">
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin
+                    professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
+                    consectetur
+                </p>
+            </div>
+            <div class="strength">
+                <p class="icon"><i class="fa-solid fa-user-group"></i></p>
+                <h3 class="strength-name">Strength3</h3>
+                <p class="strength-text">
+                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin
+                    professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words,
+                    consectetur
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="profile">
+        <h2 class="profile-text">Profile</h2>
+        <p class="profile-name">
+            It is a long established fact that a reader will be distracted by the readable<br>
+            content of a page when looking at its layout.<br>
+            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+        </p>
+        <div class="profile-bottom">
+            <div class="profile-img">
+                <img src="img/my-icon.jpg" alt="profile-img">
+            </div>
+            <div class="profile-ex">
+                <div class="myname">
+                    <h2>MyName</h2>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                        roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                        Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of
+                        the more obscure Latin words, consectetur</p>
+                </div>
+                <div class="myskill">
+                    <h2>MySkills</h2>
+                    <p>HTML/CSS,JavaScript,JQuery,PhotoShop</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <p class="footer-text">© 2022 WebCamp</p>
+    </footer>
 </body>
+
 </html>
