--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         </nav>
     </header>
     <div class="main-visual">
-        <p class="main-visual-text">Lorem Ipsum</p>
-        <p class="main-visual-name">simply dummy text of the printing</p>
+        <h2 class="main-text">Lorem Ipsum</h2>
+        <p class="main-name">simply dummy text of the printing</p>
     </div>
     <div class="portfolio">
-        <h2 class="portfolio-text">Portfolio</h2>
-        <p class="portfolio-name">
+        <h2 class="text">Portfolio</h2>
+        <p class="name">
             It is a long established fact that a reader will be destracted by the readable<br>
             content of a page whrn looking at its layout<br>
             The point of using Lorem Ipsum is thst it has more-or-less normal distribution of letters
@@ -45,8 +45,8 @@
         </div>
     </div>
     <div class="features">
-        <h2 class="feature-text">Feature</h2>
-        <p class="feature-name">
+        <h2 class="text">Feature</h2>
+        <p class="name">
             It is a long established fact that a reader will be distracted by the readable<br>
             content of a page when looking at its layout.<br>
             The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
@@ -85,8 +85,8 @@
         </div>
     </div>
     <div class="profile">
-        <h2 class="profile-text">Profile</h2>
-        <p class="profile-name">
+        <h2 class="text">Profile</h2>
+        <p class="name">
             It is a long established fact that a reader will be distracted by the readable<br>
             content of a page when looking at its layout.<br>
             The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
@@ -110,7 +110,30 @@
             </div>
         </div>
     </div>
-
+    <div class="contact">
+        <h2 class="text">Contact</h2>
+        <p class="name">
+            It is a long established fact that a reader will be distracted by the readable<br>
+            content of a page when looking at its layout.<br>
+            The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters
+        </p>
+        <div class="contact-bottom">
+            <div class="mail-tel">
+                <h3>Mail</h3>
+                <p>aaa@bbb.com</p>
+                <h3>Tel</h3>
+                <p>111-2222-333</p>
+            </div>
+            <div class="sns">
+                <h3>SNS</h3>
+                <div class="social">
+                    <i class="fa-brands fa-facebook-square"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
         <p class="footer-text">© 2022 WebCamp</p>
     </footer>
