--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Site</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/55c81123f0.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/900e5c76da.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -54,7 +54,7 @@
         <div class="strength-box">
             <div class="strength">
                 <p class="icon"><i class="fa-solid fa-code"></i></p>
-                <h3 class="strength-name"><br>Strength1</h3>
+                <h3 class="strength-name">Strength1</h3>
                 <p class="strength-text">
                     Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
                     classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin
