add more things

--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
 <body>
     <header>
         <div>
-            <img class="logo" src="img/logo.png" alt="ロゴ">
+            <a href="#logo-1">
+                <img class="logo" src="img/logo.png" alt="ロゴ">
+            </a>
         </div>
         <nav>
             <ul class="nav-list">
-                <li class="nav-list-item">Portfolio</li>
-                <li class="nav-list-item">Feature</li>
-                <li class="nav-list-item">Profile</li>
-                <li class="nav-list-item">Contact</li>
+                <li class="nav-list-item"><a href="#portfolio1">Portfolio</a></li>
+                <li class="nav-list-item"><a href="#feature2">Feature</a></li>
+                <li class="nav-list-item"><a href="#profile3">Profile</a></li>
+                <li class="nav-list-item"><a href="#contact4">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <div class="main-visual">
+    <div class="main-visual" id="logo1">
         <h2 class="main-text">Lorem Ipsum</h2>
         <p class="main-name">simply dummy text of the printing</p>
     </div>
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio1">
         <h2 class="text">Portfolio</h2>
         <p class="name">
             It is a long established fact that a reader will be destracted by the readable<br>
@@ -44,7 +46,7 @@
             <div class="portfolio-img6"></div>
         </div>
     </div>
-    <div class="features">
+    <div class="features" id="feature2">
         <h2 class="text">Feature</h2>
         <p class="name">
             It is a long established fact that a reader will be distracted by the readable<br>
@@ -84,7 +86,7 @@
             </div>
         </div>
     </div>
-    <div class="profile">
+    <div class="profile" id="profile3">
         <h2 class="text">Profile</h2>
         <p class="name">
             It is a long established fact that a reader will be distracted by the readable<br>
@@ -110,7 +112,7 @@
             </div>
         </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact4">
         <h2 class="text">Contact</h2>
         <p class="name">
             It is a long established fact that a reader will be distracted by the readable<br>
